--- a/client/styles.css
+++ b/client/styles.css
@@ -164,3 +164,63 @@ footer {
     bottom: 0;
     box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
 }
+
+form {
+    margin-top: 2em;
+    display: inline-block;
+    text-align: left;
+    background: #fff;
+    padding: 2em;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 600px; /* Обмежуємо ширину для кращої організації на великих екранах */
+}
+
+form label {
+    display: block;
+    margin-bottom: 0.5em;
+    font-weight: bold;
+    color: #333;
+}
+
+form select, form input, form button {
+    width: 100%;
+    padding: 0.8em;
+    margin-bottom: 1.2em; /* Трохи збільшуємо відступи між елементами для кращої організації */
+    border: 1px solid #A8C2E0;
+    border-radius: 4px;
+    font-size: 1em;
+    box-sizing: border-box;
+}
+
+form button {
+    background-color: #A8C2E0;
+    color: white;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    padding: 1em;
+}
+
+form button:hover {
+    background-color: #7A9DBD;
+}
+
+#prediction h2 {
+    color: #A8C2E0;
+    margin-bottom: 1em;
+    font-size: 1.5em;
+}
+
+#prediction p {
+    margin-top: 1em;
+    font-size: 1.2em;
+    color: #555;
+    font-weight: bold;
+}
+
+input[type="number"], select {
+    max-width: 100%; /* Запобігає виходу елементів за межі */
+}
